<resources>
    <string name="app_name">Eurovision App</string>
    <string name="muje_lorin">Muje Lorin</string>
    <string name="eurovision_app">Eurovision App</string>
    <string name="my_tops">My tops</string>
    <string name="results">Results</string>
    <string name="my_tops_title">My Tops</string>
    <string name="go_back">Go Back</string>
    <string name="country_image">Country Image</string>
    <string name="doamne_ajuta_sa_apari">Doamne ajuta sa apari</string>
    <string name="city">City</string>
    <string name="year">Year</string>
    <string name="buton">Buton</string>
    <string name="buton_contest">Buton contest</string>
    <string name="buton_pentru_a_accesa_contest">Buton pentru a accesa contest</string>
    <string name="hielau">Hielau</string>
    <string name="ceva">Ceva</string>
    <string name="aici">Aici</string>
    <string name="_10">10.</string>
    <string name="_9">9.</string>
    <string name="_8">8..</string>
    <string name="_7">7.</string>
    <string name="_6">6.</string>
    <string name="_4">4.</string>
    <string name="_2">2.</string>
    <string name="_1">1.</string>
    <string name="_5">5.</string>
    <string name="_3">3.</string>
    <string name="_2p">2p</string>
    <string name="_4p">4p</string>
    <string name="_3p">3p</string>
    <string name="_5p">5p</string>
    <string name="_6p">6p</string>
    <string name="_7p">7p</string>
    <string name="_8p">8p</string>
    <string name="_10p">10p</string>
    <string name="_12p">12p</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="_2023">2023</string>
    <string name="login_sign_up">Login/Sign up</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome_back2">Welcome back!</string>
    <string name="firstname_secondname">FirstName SecondName</string>
    <string name="logout">LogOut</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="news">News</string>
    <string name="newsf">NEWSf</string>
    <string name="top">Top</string>
    <string name="locations">Locations</string>
    <string name="_1p">1p</string>
    <string name="save">Save</string>
    <string name="overall_top">Overall Top</string>
    <string name="eurovision_odds">Eurovision Odds</string>
    <string name="odds">Odds</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="bottom1">Bottom1</string>
    <string name="bottom2">Bottom2</string>
    <string name="bottom3">Bottom3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_1">Bottom 1</string>
    <string name="bottom_2">Bottom 2</string>
    <string name="bottom_3">Bottom 3</string>
    <string name="_2021">2021</string>
    <string name="_2022">2022</string>
    <string name="m_s_bank_arena"><![CDATA[M&S Bank Arena]]></string>
    <string name="palaolimpico">Palaolimpico</string>
    <string name="palaolimpicoo">PalaOlimpico</string>
    <string name="rotterdam_ahoy_arena">Rotterdam Ahoy Arena</string>
    <string name="__8">8.</string>
    <string name="rotterdam_ahoy">Rotterdam Ahoy</string>
    <string name="official_results">Official Results</string>
    <string name="users_top">Users Top</string>
    <string name="select_contest">Select contest</string>
</resources>