<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAllCaps="false"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/fstName"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="serif"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/sndName"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="serif"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/emailText"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/passText"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:text="@string/gender"
        android:fontFamily="serif"
        android:layout_width="wrap_content"
        android:textStyle="italic"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/male"
            android:checked="true"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:fontFamily="serif"
            android:layout_height="wrap_content"
            android:text="@string/male"/>

        <RadioButton
            android:id="@+id/female"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:fontFamily="serif"
            android:layout_height="wrap_content"
            android:text="@string/female"/>

    </RadioGroup>
<LinearLayout
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/cancel"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>

</LinearLayout>