<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple_200">

    <EditText
        android:id="@+id/emailText"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passText"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginTop="25dp"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passText" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginTop="25dp"
        android:fontFamily="serif"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="309dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAllCaps="false"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/auth_back"
        android:layout_width="109dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="2dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/go_back"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/loginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />
</androidx.constraintlayout.widget.ConstraintLayout>