<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="430sp"
    android:layout_height="80sp"
    android:id = "@+id/contest_layout"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/contestCity"
        android:layout_width="204dp"
        android:layout_height="70dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:gravity="center|left"
        android:scaleType="centerInside"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/contestImage"
        android:layout_width="86dp"
        android:layout_height="63dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/country_image"
        android:foregroundGravity="center"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contestYear"
        android:layout_width="102dp"
        android:layout_height="70dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif-monospace"
        android:gravity="center|left"
        android:scaleType="centerInside"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contestButton"
        android:layout_width="451dp"
        android:layout_height="89dp"
        android:layout_marginEnd="4dp"
        android:text=""
        android:contentDescription="@string/buton_contest"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>