<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/main_wallpaper"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="serif"
        android:text="@string/eurovision_app"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintVertical_bias="0.196">

        <Button
            android:id="@+id/my_tops"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="30dp"
            android:background="@color/button_color2"
            android:focusable="false"
            android:fontFamily="sans-serif-black"
            android:text="@string/my_tops"
            android:textColor="#FFFFFF"
            android:textDirection="inherit"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_title"
            app:layout_constraintVertical_bias="0.145"
            app:rippleColor="@color/pastel_purple" />

        <Button
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@color/button_color2"
            android:focusable="false"
            android:fontFamily="sans-serif-black"
            android:text="@string/official_results"
            android:textColor="#FFFFFF"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_tops"
            app:layout_constraintVertical_bias="0.095"
            app:rippleColor="@color/pastel_purple"/>

        <Button
            android:id="@+id/locations"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@color/button_color2"
            android:focusable="false"
            android:fontFamily="sans-serif-black"
            android:text="@string/locations"
            android:textColor="#FFFFFF"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/results"
            app:rippleColor="@color/pastel_purple"/>

        <Button
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@color/button_color2"
            android:focusable="false"
            android:fontFamily="sans-serif-black"
            android:text="@string/users_top"
            android:textColor="#FFFFFF"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/news"
            app:rippleColor="@color/pastel_purple"/>

        <Button
            android:id="@+id/odds"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@color/button_color2"
            android:focusable="false"
            android:fontFamily="sans-serif-black"
            android:text="@string/odds"
            android:textColor="#FFFFFF"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top"
            app:rippleColor="@color/pastel_purple"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/authButton"
        android:layout_width="93dp"
        android:layout_height="81dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/login_sign_up"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/auth" />

</androidx.constraintlayout.widget.ConstraintLayout>
